<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_Radius"
    app:cardCornerRadius="@dimen/card_Radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_superheroe"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="6dp"
            android:padding="@dimen/margin"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:textSize="@dimen/name_Text"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/text_superhero_name"
            app:layout_constraintEnd_toStartOf="@id/ic_arrow"
            app:layout_constraintStart_toEndOf="@+id/image_superheroe"
            app:layout_constraintTop_toTopOf="@+id/image_superheroe" />

        <TextView
            android:id="@+id/text_fullName"
            android:layout_width="0dp"
            android:textSize="@dimen/fullName_Text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_S"
            android:text="@string/text_biography_fullName"
            app:layout_constraintEnd_toStartOf="@id/ic_arrow"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@id/text_name" />

        <TextView
            android:textSize="@dimen/fullName_Text"
            android:id="@+id/text_occupation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/text_work_occupation"
            app:layout_constraintBottom_toBottomOf="@id/image_superheroe"
            app:layout_constraintEnd_toStartOf="@id/ic_arrow"
            app:layout_constraintStart_toStartOf="@+id/text_fullName" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ic_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="@id/image_superheroe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_superheroe" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>